--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     <meta name="theme-color" content="#213063">
     
     <!-- Manifest -->
-    <link rel="manifest" href="data:application/manifest+json;base64,ewogICJuYW1lIjogIkhFTElPUyBURVJNSU5BTCIsCiAgInNob3J0X25hbWUiOiAiSEVMSU9TIiwKICAic3RhcnRfdXJsIjogIi4iLAogICJkaXNwbGF5IjogInN0YW5kYWxvbmUiCiAgfQ==">
-
+    <!-- Manifest (安卓/PWA 配置) -->
+    <link rel="manifest" href="manifest.json">
+    
+    <!-- iOS Icon (苹果手机专用图标配置) -->
+    <link rel="apple-touch-icon" href="https://files.catbox.moe/pq5tub.jpg">
     <!-- 引用外部样式表 -->
     <link rel="stylesheet" href="style.css">
 </head>
